fixed sideNav alignment

--- a/beta/jebs-notebook-2016/styles/scss/partials/layout-styles/layout_xl.scss
+++ b/beta/jebs-notebook-2016/styles/scss/partials/layout-styles/layout_xl.scss
@@ -13,7 +13,7 @@
 .contentWrapper .secondary {
 	width: 18%;
 	float: right;
-	margin-top: 130px;
+	margin-top: 155px;
 }
 
 .contentWrapper .secondary .sideNav {	
